# nanoflextok

./: .gitignore  LICENSE  README.md  flux2_tiny_autoencoder.py  mnist_train.ipynb  pyproject.toml
model/: decoder.py  encoder.py  flextok.py  fsq.py  iteration_methods.py  positional_emb.py  transformer.py
scripts/: precompute_latents.py  precompute_latents_anime.py  train_cc3m.py  train_gochi_usa.py  train_imagenet.py  train_imagenet_bench.py  train_mnist.py
utils/: cc3m_logging.py  gochiusa.py  imagenet.py  logging.py  mnist_logging.py  utils.py
